[service] fix